# options-desk

./: .cursorrules  .gitignore  AGENT.en.md  AGENT.md  AGENTS.md  ARENA.md  CLAUDE.md  DEVELOPMENT.md  README.en.md  README.md  README.ru.md  Setup.md  package.json  pyproject.toml
.github/workflows/: ci.yaml  dependency-updates.yml  github-pages.yml  update-data.yml
data/: A.json  AA.json  AAAU.json  AADX.json  AAL.json  AAMI.json  AAOG.json  AAOI.json  AAON.json  AAOX.json  AAP.json  AAPB.json  AAPD.json  AAPL.json  AAPU.json  AAPW.json  AAPX.json  AARD.json  AAXJ.json  AB.json  ABAT.json  ABBV.json  ABCB.json  ABCL.json  ABEO.json  ABEV.json  ABFL.json  ABG.json  ABM.json  ABNB.json  ABNG.json  ABOS.json  ABR.json  ABSI.json  ABT.json  ABTC.json  ABUS.json  ABVC.json  ABVX.json  ABX.json  (+4928 more)
data/options/: AAPL.json  ABBV.json  ADBE.json  ADC.json  ADI.json  ADP.json  AEM.json  AG.json  AGI.json  ALLY.json  AMAT.json  AMD.json  AMGN.json  AMP.json  AMZN.json  ANET.json  AON.json  APP.json  ASM.json  ASML.json  ATAT.json  AU.json  AVGO.json  AWI.json  AXP.json  BAC.json  BE.json  BEN.json  BKNG.json  (+307 more)
docs/: .cursorrules  AGENT.ru.md  AGENTS.en.md  AGENTS.ru.md  ARENA.en.md  ARENA.ru.md  CLAUDE.ru.md  DEVELOPMENT.en.md  DEVELOPMENT.ru.md  LICENSE  README.en.md  README.ru.md  Setup.en.md  Setup.ru.md
scripts/: cloudflare-worker.js  fetch_data.py  no_options.json  options-data.py  options-local-proxy.ts  yahoo-proxy.ts
src/: cloudflare-proxy-naming.test.ts  data-paths.test.ts  header-parity.test.ts  i18n.tsx  index.css  index.html  main.tsx  scripts-naming.test.ts
