[project]
name = "options-desk"
version = "0.1.0"
description = "Options Desk"
readme = "README.md"
authors = [
    { name = "Maksim Kostromin", email = "daggerok@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false
